Додає модальне вікно та анімацію декоративних ефектів для сторінок макета

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,10 @@
                 <ul class="projects-list list">
                     <li class="projects-list-item">
                         <a href="" class="projects-list-link link">
-                            <img src="./images/portfolio/technoquack-site.jpg" alt="Ноутбук" width="370">
+                            <div class="projects-list-cover-wrap">
+                                <img src="./images/portfolio/technoquack-site.jpg" alt="Ноутбук" width="370">
+                                <p class="projects-list-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="projects-list-box">
                                 <h2 class="projects-list-title">Технокряк</h2>
                                 <p class="projects-list-text">Веб-сайт</p>
@@ -82,7 +85,10 @@
                     </li>
                     <li class="projects-list-item">
                         <a href="" class="projects-list-link link">
-                            <img src="./images/portfolio/poster-design.jpg" alt="Постер с баскетболистами" width="370">
+                            <div class="projects-list-cover-wrap">
+                                <img src="./images/portfolio/poster-design.jpg" alt="Постер с баскетболистами" width="370">
+                                <p class="projects-list-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="projects-list-box">
                                 <h2 class="projects-list-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="projects-list-text">Дизайн</p>
@@ -91,7 +97,10 @@
                     </li>
                     <li class="projects-list-item">
                         <a href="" class="projects-list-link link">
-                            <img src="./images/portfolio/restaurant-app.jpg" alt="Логотип ресторана" width="370">
+                            <div class="projects-list-cover-wrap">
+                                <img src="./images/portfolio/restaurant-app.jpg" alt="Логотип ресторана" width="370">
+                                <p class="projects-list-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="projects-list-box">
                                 <h2 class="projects-list-title">Ресторан Seafood</h2>
                                 <p class="projects-list-text">Приложение</p>
@@ -100,7 +109,10 @@
                     </li>
                     <li class="projects-list-item">
                         <a href="" class="projects-list-link link">
-                            <img src="./images/portfolio/prime-marketing.jpg" alt="Наушники" width="370">
+                            <div class="projects-list-cover-wrap">
+                                <img src="./images/portfolio/prime-marketing.jpg" alt="Наушники" width="370">
+                                <p class="projects-list-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="projects-list-box">
                                 <h2 class="projects-list-title">Проект Prime</h2>
                                 <p class="projects-list-text">Маркетинг</p>
@@ -109,7 +121,10 @@
                     </li>
                     <li class="projects-list-item">
                         <a href="" class="projects-list-link link">
-                            <img src="./images/portfolio/boxes-app.jpg" alt="Две коробки" width="370">
+                            <div class="projects-list-cover-wrap">
+                                <img src="./images/portfolio/boxes-app.jpg" alt="Две коробки" width="370">
+                                <p class="projects-list-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="projects-list-box">
                                 <h2 class="projects-list-title">Проект Boxes</h2>
                                 <p class="projects-list-text">Приложение</p>
@@ -118,7 +133,10 @@
                     </li>
                     <li class="projects-list-item">
                         <a href="" class="projects-list-link link">
-                            <img src="./images/portfolio/inspiration-site.jpg" alt="Монитор" width="370">
+                            <div class="projects-list-cover-wrap">
+                                <img src="./images/portfolio/inspiration-site.jpg" alt="Монитор" width="370">
+                                <p class="projects-list-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="projects-list-box">
                                 <h2 class="projects-list-title" lang="en">Inspiration has no Borders</h2>
                                 <p class="projects-list-text">Веб-сайт</p>
@@ -127,7 +145,10 @@
                     </li>
                     <li class="projects-list-item">
                         <a href="" class="projects-list-link link">
-                            <img src="./images/portfolio/ed-design.jpg" alt="Книга" width="370">
+                            <div class="projects-list-cover-wrap">
+                                <img src="./images/portfolio/ed-design.jpg" alt="Книга" width="370">
+                                <p class="projects-list-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="projects-list-box">
                                 <h2 class="projects-list-title">Издание Limited Edition</h2>
                                 <p class="projects-list-text">Дизайн</p>
@@ -136,7 +157,10 @@
                     </li>
                     <li class="projects-list-item">
                         <a href="" class="projects-list-link link">
-                            <img src="./images/portfolio/lab-marketing.jpg" alt="Бирка" width="370">
+                            <div class="projects-list-cover-wrap">
+                                <img src="./images/portfolio/lab-marketing.jpg" alt="Бирка" width="370">
+                                <p class="projects-list-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="projects-list-box">
                                 <h2 class="projects-list-title">Проект LAB</h2>
                                 <p class="projects-list-text">Маркетинг</p>
@@ -145,7 +169,10 @@
                     </li>
                     <li class="projects-list-item">
                         <a href="" class="projects-list-link link">
-                            <img src="./images/portfolio/growing-business-app.jpg" alt="Работа с ноутбуком" width="370">
+                            <div class="projects-list-cover-wrap">
+                                <img src="./images/portfolio/growing-business-app.jpg" alt="Работа с ноутбуком" width="370">
+                                <p class="projects-list-cover-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="projects-list-box">
                                 <h2 class="projects-list-title" lang="en">Growing Business</h2>
                                 <p class="projects-list-text">Приложение</p>
