--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section class="hero">
             <div class="container">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button class="hero-btn" type="button">Заказать услугу</button>
+                <button class="hero-btn" type="button" data-modal-open>Заказать услугу</button>
             </div>
         </section> 
        
@@ -117,12 +117,15 @@
                 <ul class="work-list list">
                     <li class="work-list-item">
                         <img src="./images/what_we_do/desktop_apps.jpg" alt="Написание кода" width="370" />
+                        <p class="work-list-item-text">Десктопные приложения</p>
                     </li>
                     <li class="work-list-item">
                         <img src="./images/what_we_do/mobile_apps.jpg" alt="Разработка мобильного приложения" width="370" />
+                        <p class="work-list-item-text">Мобильные приложения</p>
                     </li>
                     <li class="work-list-item">
                         <img src="./images/what_we_do/design_solutions.jpg" alt="Работа с графическим планшетом" width="370" />
+                        <p class="work-list-item-text">Дизайнерские решения</p>
                     </li>
                 </ul>
             </div>
@@ -399,5 +402,15 @@
             </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button class="modal-close-btn" type="button" data-modal-close>
+                <svg class="modal-close-btn-icon" width="18" height="18">
+                    <use href="./images/icons/icons.svg#icon-close-black-18dp"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
  </body>
 </html>
